2006-05-07  Graydon Hoare  <graydon@pobox.com>

	* database.{cc,hh} (pending_writes): New fulltext write buffer,
	gives about 20% performance gain on initial pull.
	(database::have_pending_write): Helper function.
	(database::load_pending_write): Likewise.
	(database::cancel_pending_write): Likewise.
	(database::schedule_write): Likewise.
	(database::exists): Modify to use buffer.
	(database::put_version): Likewise.
	(database::put_file): Likewise.
	(database::put_roster): Likewise.

2006-05-06  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Translated a few more strings to Italian (162 to go).

2006-05-06  Richard Levitte  <richard@levitte.org>

	* po/sv.po: New string to translate.

2006-05-06  Richard Levitte  <richard@levitte.org>

	* INSTALL: Warn people not to run "make check" as root, since it
	will cause failure of the tests.  I jave no idea if there's any
	such possiblity on Windows, someone else will have to fill that
	in.

2006-05-06  Timothy Brownawell  <tbrownaw@gmail.com>

	* database_check.cc (check_db_integrity_check): Replace F with FL.

2006-05-06  Nathaniel Smith  <njs@pobox.com>

	Patch contributed by 'zecke'.
	* database.cc (check_integrity): 
	* database_check.cc (check_db_integrity_check): Add a call to
	PRAGMA integrity_check to 'db check'.

2006-05-05  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Retranslate a few changed strings.

2006-05-05  Nathaniel Smith  <njs@pobox.com>

	* database.cc (info): Include count of total nodes allocated in
	this db in 'db info' output.

2006-05-04  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog: fix whitespace.

2006-05-04  Nathaniel Smith  <njs@pobox.com>

	* cmd_files.cc (annotate): Check whether file exists.
	* tests/t_annotate.at: Test this check.

2006-05-04  Matt Johnston  <matt@ucc.asn.au>

	* work.cc (editable_working_tree::apply_delta): filename argument
	was missing for E() format string.

2006-05-02  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A few new strings to translate.
