@@ -8,7 +8,6 @@
 #include <map>
 #include <algorithm>
 
-#include "restrictions.hh"
 #include "transforms.hh"
 #include "inodeprint.hh"
 
@@ -229,14 +228,14 @@ namespace commands
 
 CMD(help, N_("informative"), N_("command [ARGS...]"), N_("display command help"), OPT_NONE)
 {
-        if (args.size() < 1)
-                throw usage("");
-
-        string full_cmd = complete_command(idx(args, 0)());
-        if ((*cmds).find(full_cmd) == (*cmds).end())
-                throw usage("");
-
-        throw usage(full_cmd);
+  if (args.size() < 1)
+    throw usage("");
+  
+  string full_cmd = complete_command(idx(args, 0)());
+  if ((*cmds).find(full_cmd) == (*cmds).end())
+    throw usage("");
+  
+  throw usage(full_cmd);
 }
 
 using std::set;
