@@ -1,3 +1,12 @@
+2006-05-09  Derek Scherger  <derek@echologic.com>
+
+	* automate.cc (automate_inventory): remove invalid assertion
+	* cmd_diff_log.cc (log): check for null revision id rather than
+	missing revision id
+	* commands.cc: remove unnecessary #include 
+	(help): fix indentation
+	* netsync.cc: remove stale comment
+
 2006-05-07  Graydon Hoare  <graydon@pobox.com>
 
 	* database.{cc,hh} (pending_writes): New fulltext write buffer,
